Update javadoc for RxMicroTestsAnnotationProcessor